--- a/_config.yml
+++ b/_config.yml
@@ -2,15 +2,15 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://yoursite.com
-title: Your Awesome Site
-email: your-email@domain.com
-author: Your Name
-description: > # "Write an awesome description for your new site here. 
+url: http://prestonwu.com
+title: Asian Boy from Utah
+email: preston.wu1114@gmail.com
+author: Preston Wu
+description: > # "I am cuffed to a beautiful girl names M**** T**. 
   You can edit this line in _config.yml. It will appear in your document 
   head meta (for Google search results) and in your feed.xml site 
   description.
-copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
+copyright: 'Copyright &copy; 2019 Preston Wu. All Rights Reserved.'
 credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
 
 # ----------------------- #
@@ -25,10 +25,9 @@ permalink: pretty
 #   3rd Party Settings    #
 # ----------------------- #
 
-social:
-  - title: twitter
-    url: https://twitter.com/SBootstrap
-  - title: github
-    url: https://github.com/IronSummitMedia/startbootstrap
+social: 
+  - title: instagram
+    url: https://www.instagram.com/pressedonwu/
   - title: linkedin
-    url: 
+    url: https://www.linkedin.com/in/preston-wu1114/
+
